--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@ai-sdk/mistral": "^0.0.12",
@@ -50,6 +51,8 @@
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "next-themes": "^0.2.1",
+    "oauth4webapi": "2.10.4",
+    "patch-package": "^8.0.0",
     "postcss": "8.4.28",
     "react": "^18.3.1",
     "react-day-picker": "^8.9.1",
