--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-config-next": "^14.0.1",
     "firebase": "^8.3.3",
     "idb-keyval": "^6.2.1",
+    "jotai": "^1.13.1",
     "lucide-react": "^0.291.0",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.18",
