--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "next-themes": "^0.2.1",
     "oauth4webapi": "2.10.4",
     "patch-package": "^8.0.0",
+    "points-on-curve": "^0.2.0",
     "postcss": "8.4.28",
     "react": "^18.3.1",
     "react-day-picker": "^8.9.1",
