Add a local package for Ilyas ai
AB#27

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "workspaces": [
     "packages/excalidraw",
-    "packages/utils"
+    "packages/utils",
+    "packages/ilyas.ai"
   ],
   "dependencies": {
     "@ai-sdk/mistral": "^0.0.12",
