--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /node_modules
 /packages/excalidraw/node_modules
 /packages/utils/node_modules
+/packages/ilyas.ai/node_modules
+/packages/ilyas.ai/dist
 /.pnp
 .pnp.js
 
