--- a/packages/excalidraw/package.json
+++ b/packages/excalidraw/package.json
@@ -63,12 +63,14 @@
     "@radix-ui/react-popover": "1.0.3",
     "@radix-ui/react-tabs": "1.0.2",
     "@tldraw/vec": "1.7.1",
+    "ai": "^3.1.31",
     "browser-fs-access": "0.29.1",
     "canvas-roundrect-polyfill": "0.0.1",
     "clsx": "1.1.1",
     "cross-env": "7.0.3",
     "fractional-indexing": "3.2.0",
     "fuzzy": "0.1.3",
+    "ilyas.ai": "file:../ilyas.ai",
     "image-blob-reduce": "3.0.1",
     "jotai": "1.13.1",
     "lodash.throttle": "4.1.1",
