Remove ilyas.ai package

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "workspaces": [
     "packages/excalidraw",
-    "packages/utils",
-    "packages/ilyas.ai"
+    "packages/utils"
   ],
   "dependencies": {
     "@ai-sdk/mistral": "^0.0.12",
