--- a/package.json
+++ b/package.json
@@ -33,16 +33,21 @@
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.1.0",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
-    "@tanstack/react-table": "^8.10.7",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.0",
+    "@tanstack/react-table": "^8.17.3",
     "@types/lodash.throttle": "^4.1.9",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
@@ -52,11 +57,14 @@
     "autoprefixer": "10.4.15",
     "browser-fs-access": "^0.29.1",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "date-fns": "^2.30.0",
+    "emblor": "^1.3.5",
     "eslint": "8.48.0",
     "eslint-config-next": "^14.0.1",
     "firebase": "^8.3.3",
+    "framer-motion": "^11.2.12",
     "idb-keyval": "^6.2.1",
     "jotai": "^1.13.1",
     "lodash.throttle": "^4.1.1",
@@ -72,6 +80,7 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.47.0",
+    "react-resizable-panels": "^2.0.19",
     "recharts": "^2.9.2",
     "sass": "^1.77.5",
     "sharp": "^0.32.5",
