--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,9 @@
 {
     "version": "0.2.0",
+    "resolveSourceMapLocations": [
+    "${workspaceFolder}/",
+    "!/node_modules/**"
+    ],
     "configurations": [
       {
         "name": "Next.js: debug server-side",
