--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@uploadthing/react": "^5.7.0",
+    "accept-language": "^3.0.18",
     "ai": "^3.1.14",
     "autoprefixer": "10.4.15",
     "browser-fs-access": "^0.29.1",
@@ -57,6 +58,9 @@
     "eslint": "8.48.0",
     "eslint-config-next": "^14.0.1",
     "firebase": "^8.3.3",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-resources-to-backend": "^1.2.1",
     "idb-keyval": "^6.2.1",
     "jotai": "^1.13.1",
     "lodash.throttle": "^4.1.1",
@@ -70,9 +74,11 @@
     "points-on-curve": "^0.2.0",
     "postcss": "8.4.28",
     "react": "^18.3.1",
+    "react-cookie": "^7.1.4",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.47.0",
+    "react-i18next": "^14.1.2",
     "recharts": "^2.9.2",
     "sass": "^1.77.5",
     "sharp": "^0.32.5",
