--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "src/app/i18n/settings.ts", "src/app/i18n/client.ts", "src/app/i18n/index.js"  ],
   "exclude": [
     "packages/excalidraw/types"
   ]
