--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier . --write",
-    "postinstall": "patch-package",
+    "postinstall": "patch-package --patch-dir src/patches",
     "migrate_dev": "dotenv -e .env.local -- npx prisma migrate dev",
     "migrate_deploy": "dotenv -e .env.local -- npx prisma migrate deploy"
   },
