--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.47.0",
     "react-i18next": "^14.1.2",
+    "react-moment": "^1.1.3",
     "recharts": "^2.9.2",
     "sass": "^1.77.5",
     "sharp": "^0.32.5",
