--- a/package.json
+++ b/package.json
@@ -42,11 +42,12 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@reduxjs/toolkit": "^2.2.6",
     "@tanstack/react-table": "^8.10.7",
     "@types/lodash.throttle": "^4.1.9",
     "@types/node": "20.5.7",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@uploadthing/react": "^5.7.0",
     "accept-language": "^3.0.18",
     "ai": "^3.1.14",
@@ -80,6 +81,7 @@
     "react-hook-form": "^7.47.0",
     "react-i18next": "^14.1.2",
     "react-moment": "^1.1.3",
+    "react-redux": "^9.1.2",
     "recharts": "^2.9.2",
     "sass": "^1.77.5",
     "sharp": "^0.32.5",
