--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "browser-fs-access": "^0.29.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "convex": "^1.13.0",
+    "convex-helpers": "^0.1.45",
     "date-fns": "^2.30.0",
     "eslint": "8.48.0",
     "eslint-config-next": "^14.0.1",
@@ -63,6 +65,7 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
     "idb-keyval": "^6.2.1",
+    "jose": "^5.6.3",
     "jotai": "^1.13.1",
     "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.291.0",
