--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier . --write",
-    "postinstall": "patch-package --patch-dir src/patches",
-    "migrate_dev": "dotenv -e .env.local -- npx prisma migrate dev",
-    "migrate_deploy": "dotenv -e .env.local -- npx prisma migrate deploy"
+    "postinstall": "patch-package --patch-dir src/patches"
   },
   "workspaces": [
     "packages/excalidraw",
@@ -18,13 +16,11 @@
   ],
   "dependencies": {
     "@ai-sdk/mistral": "^0.0.12",
-    "@auth/prisma-adapter": "^2.2.0",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.3.2",
-    "@prisma/client": "^5.15.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -102,7 +98,6 @@
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "prettier": "3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.14",
-    "prisma": "^5.15.1"
+    "prettier-plugin-tailwindcss": "^0.5.14"
   }
 }
