--- a/package.json
+++ b/package.json
@@ -33,18 +33,20 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^1.2.2",
-    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.2.6",
     "@tanstack/react-table": "^8.10.7",
     "@types/lodash.throttle": "^4.1.9",
     "@types/node": "20.5.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@uiw/react-color-circle": "^2.3.0",
     "@uploadthing/react": "^5.7.0",
     "accept-language": "^3.0.18",
     "ai": "^3.1.14",
