--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-dismissable-layer": "^1.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
@@ -54,6 +55,7 @@
     "browser-fs-access": "^0.29.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^1.0.0",
     "convex": "^1.13.0",
     "convex-helpers": "^0.1.45",
     "date-fns": "^2.30.0",
@@ -101,5 +103,10 @@
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.14"
+  },
+  "pnpm": {
+    "overrides": {
+      "@radix-ui/react-dismissable-layer": "1.1.0"
+    }
   }
 }
