AB#76 integration ai chatbot template( + gitignored packagelockjson)

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "@ai-sdk/mistral": "^0.0.12",
+    "@ai-sdk/openai": "^0.0.39",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
@@ -49,8 +50,9 @@
     "@types/react-dom": "^18.3.0",
     "@uiw/react-color-circle": "^2.3.0",
     "@uploadthing/react": "^5.7.0",
+    "@vercel/kv": "^2.0.0",
     "accept-language": "^3.0.18",
-    "ai": "^3.1.14",
+    "ai": "^3.2.36",
     "autoprefixer": "10.4.15",
     "browser-fs-access": "^0.29.1",
     "class-variance-authority": "^0.7.0",
@@ -62,6 +64,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "^14.0.1",
     "firebase": "^8.3.3",
+    "framer-motion": "^11.3.17",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
@@ -83,22 +86,30 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-i18next": "^14.1.2",
+    "react-markdown": "^9.0.1",
     "react-moment": "^1.1.3",
     "react-redux": "^9.1.2",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-textarea-autosize": "^8.5.3",
     "recharts": "^2.9.2",
+    "remark-gfm": "^1.0.0",
+    "remark-math": "^6.0.0",
     "sass": "^1.77.5",
     "sharp": "^0.32.5",
     "socket.io-client": "^4.7.5",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "uploadthing": "^5.7.4",
+    "usehooks-ts": "^3.1.0",
     "uuid": "^9.0.1",
     "zod": "^3.23.8",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "prettier": "3.0.3",
